@@ -16,6 +16,7 @@
  * cleaned up src/action.c, moved redundant code into add_deps_to_trans()
  * fully implemented slack-conflicts support
  * updated header files, including useful variable names in function definitions
+ * silently perform md5 check, complain out loud only if not correct
 
 0.9.7h Dec 08, 2003
  * updated FAQ
